2002-04-15  Michael Hope  <michaelh@vroom>

	* device/lib/z80/printf.c (sprintf): Added.

	* src/z80/ralloc.c (packRegisters): Disabled pack HL use for GB as it's broken.

	* src/z80/peeph.def: Added transpose redundent load rule.

	* src/z80/main.c: Added force callee saves for jaune.

	* src/port.h: Removed the i186 and tlcs-900h ports as they weren't being being developed.

	* src/SDCCmain.c: Pulled the options definition out so that you can add port specific options without changing the main file.

2002-03-28  Johan Knol  <johan@balder>

	* src/SDCCval.c: fixed bug #532436

2002-03-14  Scott Dattalo <scott@dattalo.com>
	* /src/port.h:
	Added "char *Processor" field to the port structure.

	* /src/SDCCmain.c:
	Added -p option. Allows port dependent processor to be specified.

	* all ports:
	Initialized the new field char *Processor field to NULL in all ports

	* /src/pic/*:
	Compiler generated registers for interrupt context saving
	were not getting allocated.
		
2002-03-16  Sandeep Dutta  <sandeep@ddi.com>

	* /src/SDCCast.c:
	Fixed left shift. Will promote the left side of a left shift
	if a) left shifting more than size of operand or b) when assigned
	to something size > size of left side

2002-03-14  Scott Dattalo <scott@dattalo.com>
	* src/pic/*
	tons of changes. Register allocation has been 
	rewritten. Added customization for the various PICs. Flow
	analysis is restructured. ...

	* src/pic/device.h:
	Added

	* src/pic/device.c:
	Added. device.c is a PIC port hack to accomodate variations
	in PIC devices.

2002-03-13  Michael Hope  <michaelh@vroom>

	* src/z80/gen.c (genGenPointerGet): Fixed a bug where a pointer in HL is dereferenced into HL but HL is not spilled.  Yeah.

2002-03-04  johanknol  <johanknol@manik>

	* /src/SDCCval.c: fixed

	const unsigned char arr[][2] = { { 0, 1 } };
	t18.c:1: error: Initializer element is not constant

2002-03-04  bela  <bela@manik>

	* /device/include/mcs51reg.h:
	ds89c420 register definition update
